--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: c
+language: python
 
-sudo: true
+sudo: false
 
 branches:
   only:
@@ -8,19 +8,18 @@ branches:
 env:
   global:
     - LUAROCKS=2.3.0
+    - TORCH_SERVER=https://raw.githubusercontent.com/torch/rocks/master/
   matrix:
-    - LUA=lua5.1
+    - LUA="lua 5.1"
 
 before_install:
-  - source .travis/setenv_lua.sh
-  - travis_wait .travis/install-torch-wrapper.sh $(pwd)/deps/torch $(pwd)/torch-install-log.txt
-  - source $(pwd)/deps/torch/install/bin/torch-activate
+  - pip install hererocks
+  - hererocks lua_install -r^ --$LUA
+  - export PATH=$PATH:$PWD/lua_install/bin
 
 install:
+  - luarocks --from=$TORCH_SERVER install torch
   - luarocks make torch-travis-example-scm-0.rockspec CFLAGS="-O2 -fPIC -fprofile-arcs" LIBFLAG="-shared"
-
-before_script:
-  - source $(pwd)/deps/torch/install/bin/torch-activate
 
 script:
   - lua tests/my_test_file.lua
