--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,26 @@ sudo: false
 branches:
   only:
     - master
+cache:
+  directories:
+  - torch
+
 env:
   global:
-    - LUAROCKS=2.3.0
     - TORCH_SERVER=https://raw.githubusercontent.com/torch/rocks/master/
   matrix:
-    - LUA="lua 5.1"
-    - LUA="lua 5.2"
-    - LUA="lua 5.3"
-    - LUA="luajit 2.0"
-    - LUA="luajit 2.1"
+    - LUA="LUA51"
+    - LUA="LUA52"
+    - LUA="LUA53"
+    - LUA="LUAJIT20"
+    - LUA="LUAJIT21"
 
 before_install:
-  - pip install hererocks
-  - hererocks lua_install -r^ --$LUA
-  - export PATH=$PATH:$PWD/lua_install/bin
+  - curl -s https://raw.githubusercontent.com/torch/distro/master/install-deps | bash
+  - if [[ -f torch ]]; then git clone https://github.com/torch/distro.git torch --recursive ; fi
+  - cp torch torch_$LUA
+  - cd torch_$LUA
+  - TORCH_LUA_VERSION=$LUA ./install.sh
 
 install:
   - luarocks --from=$TORCH_SERVER install torch
