--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ env:
     - LUA="LUAJIT21"
 
 before_install:
-  - curl -s https://raw.githubusercontent.com/torch/distro/master/install-deps | bash
   - if [[ -f torch ]]; then git clone https://github.com/torch/distro.git torch --recursive ; fi
   - cp torch torch_$LUA
   - cd torch_$LUA
+  - ./install-deps
   - TORCH_LUA_VERSION=$LUA ./install.sh
 
 install:
