--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 
 before_install:
   - if [[ -f torch ]]; then git clone https://github.com/torch/distro.git torch --recursive ; fi
-  - cp torch torch_$LUA
+  - cp -rf torch torch_$LUA
   - cd torch_$LUA
   - ./install-deps
   - TORCH_LUA_VERSION=$LUA ./install.sh
