--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
   - if [[ -f torch ]]; then git clone https://github.com/torch/distro.git torch --recursive ; fi
   - cp -rf torch torch_$LUA
   - cd torch_$LUA
+  - ls -l
+  - pwd
   - ./install-deps
   - TORCH_LUA_VERSION=$LUA ./install.sh
 
