Replace update script

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,10 @@ env:
 before_install:
   - if [[ ! -f torch ]]; then git clone https://github.com/torch/distro.git torch --recursive ; fi
   - cd torch
-  - ./update.sh
+  - git pull
+  - git submodule update
+  - git submodule foreach git pull origin master
+  - git add extra pkg exe
   - cd ..
   - cp -rf torch torch_$LUA
   - cd torch_$LUA
