--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,10 @@ before_install:
   - cp -rf torch torch_$LUA
   - cd torch_$LUA
   - TORCH_LUA_VERSION=$LUA ./install.sh -b
-  - ./install/bin/torch-activate
+  - cd ..
 
 install:
+  - source ~/torch_$LUA/install/bin/torch-activate
   - luarocks --from=$TORCH_SERVER install torch
   - luarocks make torch-travis-example-scm-0.rockspec CFLAGS="-O2 -fPIC -fprofile-arcs -ftest-coverage" LIBFLAG="-shared --coverage"
 
