--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
   - cd ..
 
 install:
-  - source ~/torch_$LUA/install/bin/torch-activate
+  - source ./torch_$LUA/install/bin/torch-activate
   - luarocks --from=$TORCH_SERVER install torch
   - luarocks make torch-travis-example-scm-0.rockspec CFLAGS="-O2 -fPIC -fprofile-arcs -ftest-coverage" LIBFLAG="-shared --coverage"
 
